# file-descriptors

./: COPYRIGHT  Cargo.toml  LICENSE  README.md
src/: RawFdExt.rs  SpecialFileOpenError.rs  event_loop.rs  lib.rs
src/character_device/: CharacterDeviceFileDescriptor.rs  mod.rs
src/epoll/: EPollAddFlags.rs  EPollDeleteError.rs  EPollEventFlags.rs  EPollFileDescriptor.rs  EPollModifyFlags.rs  EPollRegistrationError.rs  EventPoll.rs  Reactor.rs  mod.rs
src/epoll/syscall/: EPOLL.rs  epoll_data_t.rs
src/eventfd/: EventFileDescriptor.rs
src/eventfd/syscall/: eventfd_t.rs
src/fanotify/: FanotifyFileDescriptor.rs  mod.rs
src/fanotify/syscall/: fanotify_mark.rs
src/inotify/: InotifyAddWatchFlags.rs  InotifyFileDescriptor.rs  mod.rs
src/pipes_and_fifos/: PipeFileDescriptor.rs  ReceivePipeFileDescriptor.rs  SendPipeFileDescriptor.rs  SpliceRecipient.rs  SpliceSender.rs  mod.rs
src/posix_message_queues/: PosixMessageQueue.rs  PosixMessageQueueFileDescriptor.rs  ReceivePosixMessageQueueFileDescriptor.rs  SendAndReceivePosixMessageQueueFileDescriptor.rs  SendPosixMessageQueueFileDescriptor.rs  mod.rs
src/sendfile/: mod.rs
src/signalfd/: AllSignalReactor.rs  SignalFileDescriptor.rs  SignalHandler.rs  mod.rs
src/socket/: DatagramClientSocketFileDescriptor.rs  DatagramClientSocketFileDescriptorEnum.rs  DatagramServerListenerSocketFileDescriptor.rs  DatagramServerListenerSocketFileDescriptorEnum.rs  NewSocketClientError.rs  NewSocketServerListenerError.rs  ReceivedMessageHelper.rs  SocketAddress.rs  SocketData.rs  SocketFileDescriptor.rs  StreamingServerListenerSocketFileDescriptor.rs  StreamingServerListenerSocketFileDescriptorEnum.rs  StreamingSocketFileDescriptor.rs  StreamingSocketFileDescriptorEnum.rs  UnixSocketAddress.rs  mod.rs
src/terminal/: MultipleBits.rs  TerminalFileDescriptor.rs  TerminalSettingsError.rs  mod.rs
src/timerfd/: TimerFileDescriptor.rs  mod.rs
(+24 files in other folders)
