# This file is part of file-descriptors. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/file-descriptors/master/COPYRIGHT. No part of file-descriptors, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of file-descriptors. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/file-descriptors/master/COPYRIGHT.


[package]
name = "file-descriptors"
description = "Wrapper around the common kinds of (mostly Linux) file descriptors, including sockets, pipes, FIFOs, terminals, serial ports, character devices, epoll, POSIX message queues, timerfd, eventfd, signalfd fanotify and inotify"
keywords = ["file-descriptors", "fd", "serial", "terminal", "sockets"]
categories = ["asynchronous", "external-ffi-bindings", "network-programming", "os::unix-apis"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/file-descriptors"
repository = "https://github.com/lemonrock/file-descriptors.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.3.2"

[dependencies]
cfg-if = "^0.1.6"

[target.'cfg(any(target_os = "android", target_os = "emscripten", target_os = "fuschia", target_os = "linux", target_os = "solaris",  target_env = "uclibc"))'.dependencies]
arrayvec = { version = "^0.4.9", features = ["array-sizes-33-128"] }
bitflags = "^1.0"
errno = "^0.2.4"
libc = "^0.2.44"
likely = "^0.1"
strum = "0.13.0"
strum_macros = "0.13.0"
